--- a/main.ipynb
+++ b/main.ipynb
@@ -43,7 +43,9 @@
   {
    "cell_type": "markdown",
    "id": "38dbf069-cb67-4927-90b4-6cdda08da65c",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Phase 1: Week-by-week Historical Data Collection"
    ]
@@ -1087,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "f2a2a153-ae24-47d7-8562-2a684a7538d4",
    "metadata": {},
    "outputs": [
@@ -1095,7 +1097,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The current gameweek is:  25\n"
+      "The current gameweek is:  26\n"
      ]
     }
    ],
